--- a/AgileBackEnd/src/main/resources/application.yml
+++ b/AgileBackEnd/src/main/resources/application.yml
@@ -1,7 +1,10 @@
+server:
+  port: 8888
+
 spring:
   datasource:
     username: root
-    password: 12345678
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?characterEncoding=utf-8&useSSL=false
   redis:
