--- a/FrontEnd/blog/package.json
+++ b/FrontEnd/blog/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "axios": "^0.17.1",
+    "element-ui": "^2.0.10",
+    "vuex": "^3.0.1",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
