--- a/AgileBackEnd/src/main/resources/application.yml
+++ b/AgileBackEnd/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     username: root
-    password: root
+    password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?characterEncoding=utf-8&useSSL=false
   redis:
