--- a/AgileBackEnd/pom.xml
+++ b/AgileBackEnd/pom.xml
@@ -131,6 +131,14 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>3.10.2</version>
+		</dependency>
+
+
+
 
 
 
