--- a/FrontEnd/blog/package.json
+++ b/FrontEnd/blog/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.17.1",
     "element-ui": "^2.0.10",
     "vuex": "^3.0.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "mavon-editor": "^2.4.16",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
